# prediction-creator

./: Cargo.toml  LICENSE
.github/workflows/: build.yml  release.yml
src/: main.rs
