[package]
name = "prediction-creator"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.37", features = ["derive"] }
console = "0.15.11"
dialoguer = "0.11.0"
reqwest = "0.12.15"
tokio = { version = "1.45.0", features = ["full"] }
twitch_api = { version = "0.7.2", features = ["reqwest", "helix", "tracing"] }
